--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							</div>
 						</div>
 						<div class="form-group">
-							<a class="btn btn-primary" href="{{videoThumbnail}}" download >Download Thumbnail</a>
+							<a class="btn btn-primary" href="{{videoThumbnail}}" download="{{videoDetails.thumbnailFile}}">Download Thumbnail</a>
 						</div>
 						<div class="form-group">
 							<img src="{{videoThumbnail}}" style="max-width: 100%; height: auto;">
